--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,7 @@ target-version = ['py36']
 [tool.isort]
 profile = "black"
 line_length = 100
+
+[tool.flake8]
+max-line-length = 100
+extend-ignore = ["E203"]
